[gd_scene load_steps=6 format=3 uid="uid://c5l8u3nqg7y6f"]

[ext_resource type="Script" uid="uid://dcfyyo7lceowc" path="res://scenes/menu_view.gd" id="1_context"]
[ext_resource type="Theme" uid="uid://ckorw5avm0nr4" path="res://themes/DarkMode.res" id="2_theme"]
[ext_resource type="StyleBox" uid="uid://rroywssaded8" path="res://materials/panel_style_box_flat.tres" id="3_hti5v"]
[ext_resource type="PackedScene" uid="uid://c3g5h8kak1m2n" path="res://scenes/menu_hints.tscn" id="4_menu_hints"]
[ext_resource type="PackedScene" uid="uid://dwc8k3n7y5m3a" path="res://scenes/input_icon.tscn" id="5_input_icon"]

[node name="MenuView" type="CanvasLayer"]
layer = 10
script = ExtResource("1_context")

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Overlay/CenterContainer"]
custom_minimum_size = Vector2(256, 400)
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_styles/panel = ExtResource("3_hti5v")

[node name="VBox" type="VBoxContainer" parent="Overlay/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_font_sizes/font_size = 16
text = "Menu Title"
horizontal_alignment = 1

[node name="ActionList" type="GridContainer" parent="Overlay/CenterContainer/PanelContainer/VBox"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Overlay/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomBar" type="VBoxContainer" parent="Overlay/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PaginationRow" type="HBoxContainer" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar"]
layout_mode = 2
alignment = 1

[node name="PrevIcon" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar/PaginationRow" instance=ExtResource("5_input_icon")]
layout_mode = 2
action_name = "menu_previous_page"

[node name="PrevLabel" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar/PaginationRow"]
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_font_sizes/font_size = 12
text = "Prev"
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar/PaginationRow"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="PaginationLabel" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar/PaginationRow"]
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_font_sizes/font_size = 14
text = "Page 1/1"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar/PaginationRow"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="NextIcon" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar/PaginationRow" instance=ExtResource("5_input_icon")]
layout_mode = 2
action_name = "menu_next_page"

[node name="NextLabel" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar/PaginationRow"]
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_font_sizes/font_size = 12
text = "Next"
vertical_alignment = 1

[node name="MenuHints" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar" instance=ExtResource("4_menu_hints")]
layout_mode = 2
